Flyer Travel pre-release
Почти финальная версия сайта "Flyer Travel"

--- a/travelWebSite/index.html
+++ b/travelWebSite/index.html
@@ -16,6 +16,12 @@
   <body>
     <header class="header">
       <nav class="header-nav">
+        <button class="menu_btn">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
         <ul class="nav-element">
           <a href="#" class="nav-link-logo"> FLYER </a>
         </ul>
@@ -32,7 +38,7 @@
           <a href="#" class="nav-link"> Discover </a>
         </ul>
         <ul class="nav-element">
-          <a href="#" class="header-contactBtn"> Contact </a>
+          <a href="#" class="header-contactBtn">Contact</a>
         </ul>
       </nav>
       <div class="header-title">
@@ -62,6 +68,104 @@
               <img src="./img/company/tripadvisor.png" alt="" />
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="about_us-information ">
+        <div class="container">
+          <div class="about_us-inner">
+            <div class="about_us-left">
+              <img src="img/aboutUs/AboutUs-z0.png" alt="" />
+              <div class="about_us-img-absolute">
+                <img src="img/aboutUs/AboutUs-z1.png" alt="" />
+              </div>
+            </div>
+            <div class="about_us-right">
+              <div class="about_us-title">ABOUT US</div>
+              <div class="about_us-subtitle">
+                Are you ready to start your next adventure with us?
+              </div>
+              <div class="about_us-description">
+                Rest easy knowing that our award winning organization is trusted
+                by our partners and helped create unforgettable experiences for
+                people
+              </div>
+              <div class="about_us-achivments">
+                <div class="about_us-a1">
+                  <h3>500+</h3>
+                  <p>Tours Booked</p>
+                </div>
+                <div class="about_us-a2">
+                  <h3>20+</h3>
+                  <p>Trusted Airlines</p>
+                </div>
+                <div class="about_us-a3">
+                  <h3>250+</h3>
+                  <p>Destinations</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="destinations">
+        <div class="container">
+          <div class="destinations_inner">
+            <div class="destinations-title">DESTINATIONS</div>
+            <div class="destinations-subtitle">
+              <h3 class="destinations_subtitle-left">Popular Destinations</h3>
+              <p class="destinations_subtitle-right">
+                Discover our handpicked selection of popular destinations that
+                promise breathtaking sights.
+              </p>
+            </div>
+            <div class="destinations-cards">
+              <div class="card">
+                <div class="card1">
+                  <div class="card-estimation">
+                    <img src="img/destinations/star.svg" alt="" />
+                    <div class="destination-score">4.8</div>
+                  </div>
+                  <div class="card-down-txt">
+                    <div class="card-title">Japan</div>
+                    <div class="card-price">
+                      <p>Mount Fuji Tour</p>
+                      <p>$1,149</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card2">
+                  <div class="card-estimation">
+                    <img src="img/destinations/star.svg" alt="" />
+                    <div class="destination-score">4.4</div>
+                  </div>
+                  <div class="card-down-txt">
+                    <div class="card-title">Greece</div>
+                    <div class="card-price">
+                      <p>Mykonos Island</p>
+                      <p>$899</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card3">
+                  <div class="card-estimation">
+                    <img src="img/destinations/star.svg" alt="" />
+                    <div class="destination-score">4.2</div>
+                  </div>
+                  <div class="card-down-txt">
+                    <div class="card-title">Maldives</div>
+                    <div class="card-price">
+                      <p>Maldives Tour</p>
+                      <p>$629</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
